# xdg-app-ksni-rs

./: .rustfmt.toml  Cargo.toml  LICENSE
src/: constants.rs  desktop.rs  main.rs  proxy_types.rs
src/util/: init.rs  mod.rs  xdg.rs
