[package]
name = "xdg-app-ksni-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bimap = "0.6.2"
backtrace = "0.3"
byteorder = "1"
enum-iterator = "1.1.2"
freedesktop-desktop-entry = "0.5.0"
image = "0.24.2"
notify = "4.0.17"
log = "0.4.16"
log_err = "1.1.1"
phf = { version = "0.10", features = ["macros"] }
regex = "1"
resvg = "0.23.0"
serde = "1.0.137"
simple_logger = "2.1.0"
sys-locale = "0.2.0"
systemd-journal-logger = "0.5.0"
thread-id = "4.0.0"
tiny-skia = "0.6"
tokio = { version = "1.19.2", features = ["full"] }
usvg = { version = "0.23.0", default-features = false }
xdg = "2.4.1"
zbus = { version = "2", default-features = false, features = ["tokio"] }